\name{NEWS}
\title{News for Package \pkg{PoDCall}}
\encoding{UTF-8}

\section{Changes in version 1.1.1 (2021-06-09)}{
\itemize{
    \item Implemented use of Reference well for control channel
}}

\section{Changes in version 0.99.6 (2021-04-06)}{
\itemize{
    \item Updated NEWS.Rd
}}

\section{Changes in version 0.99.5 (2020-12-09)}{
\itemize{
    \item Corrected name of an author
}}

\section{Changes in version 0.99.4 (2020-12-09)}{
\itemize{
    \item Changed R version dependency to >= 4.1 (R-devel)
}}

\section{Changes in version 0.99.3 (2020-12-08)}{
\itemize{
    \item Minor code changes as suggested by Bioconductor reviewer
}}

\section{Changes in version 0.99.2 (2020-11-11)}{
\itemize{
    \item Changed arguments in examples to run faster
}}

\section{Changes in version 0.99.1 (2020-11-11)}{
\itemize{
    \item Removed .Rproj file from repository
}}

\section{Changes in version 0.99.0 (2020-11-10)}{
\itemize{
    \item Submitted to Bioconductor
}}