@@ -1,7 +1,7 @@
 Package: PoDCall
 Type: Package
 Title: Positive Droplet Calling for DNA Methylation Droplet Digital PCR 
-Version: 1.5.1
+Version: 1.7.1
 Authors@R: c(person("Hans Petter", "Brodal", 
                     role=c("aut", "cre"), 
                     email="hans.petter.brodal@rr-research.no"),
@@ -21,7 +21,7 @@ Description: Reads files exported from 'QuantaSoft' containing amplitude values
 License: GPL-3
 Encoding: UTF-8
 RoxygenNote: 7.1.2
-Depends: R (>= 4.2)
+Depends: R (>= 4.3)
 Imports: 
     ggplot2,
     gridExtra,
@@ -40,7 +40,8 @@ Imports:
 Suggests: 
     knitr,
     rmarkdown,
-    testthat
+    testthat,
+    BiocStyle
 VignetteBuilder: knitr
 biocViews: Classification, Epigenetics, ddPCR, DifferentialMethylation,
     CpGIsland, DNAMethylation,
